added 4 new blocks, crafting recipes, and completed base localization; this version is complete but more blocks will likely be added in the future

--- a/build.gradle
+++ b/build.gradle
@@ -22,8 +22,8 @@ group= "com.ingenitor.blockenvy" // http://maven.apache.org/guides/mini/guide-na
 archivesBaseName = "BlockEnvy"
 
 minecraft {
-    version = "1.7.10-10.13.0.1187"
-    runDir = "eclipse"
+    version = "1.7.10-10.13.0.1199"
+    runDir = "debug"
 }
 
 dependencies {
